# ringkasan

./: .pre-commit-config.yaml  .python-version  README.md  pyproject.toml  requirements.txt
notebooks/: 00-explore.ipynb
ringkasan/: __init__.py
ringkasan/core/: core.py
tests/: test_ringkasan.py
