[tool.poetry]
name = "ringkasan"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["jinified <jinified@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
numpy = "^1.19.4"
scipy = "^1.5.4"
tensorflow = "^2.4.0"
tensorflow-text = "^2.4.1"
matplotlib = "^3.3.3"
scikit-learn = "^0.23.2"
jupyter = "^1.0.0"
ipykernel = "^5.4.2"
fastai = "^2.1.9"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.9.3"

[tool.poetry.scripts]
ringkasan-hello = "ringkasan:hello"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
